users can now post image links and images will be displayed at max 60% window width

--- a/styles/home.scss
+++ b/styles/home.scss
@@ -86,3 +86,12 @@ body {
   padding: 0 10px;
   text-decoration: none;
 }
+
+.navbar-user-count {
+  float: right;
+}
+
+img {
+  max-width: 60%;
+  height: auto;
+}
