--- a/styles/home.scss
+++ b/styles/home.scss
@@ -2,19 +2,22 @@
 @import url("https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css");
 @import url('https://fonts.googleapis.com/css?family=Lobster');
 
-$bgColor: #1B2432;
+$lightBackgroundColor: #403F4C;
+$darkBackgroundColor: #1B2432;
 $borderColor: #121420;
+$orange: #B76D68;
+$offWhite: #fbf7f5;
 
 body {
-  background: #403F4C;
-  color:	#fbf7f5;
+  background: $lightBackgroundColor;
+  color: $offWhite;
   font-family: 'Open Sans', sans-serif;
   font-size: 14px;
   margin: 60px 0;
 }
 
 .chatbar {
-  background: $bgColor;
+  background: $darkBackgroundColor;
   border-top: 1px solid $borderColor;
   bottom: 0;
   display: flex;
@@ -28,6 +31,7 @@ body {
 .chatbar-username {
   border: 1px solid $borderColor;
   border-radius: 10px;
+  background-color: $offWhite;
   display: block;
   height: 40px;
   line-height: 40px;
@@ -70,8 +74,8 @@ body {
 }
 
 .navbar {
-  background: $bgColor;
-  color: #B76D68;
+  background: $darkBackgroundColor;
+  color: $orange;
   border-bottom: 1px solid $borderColor;
   height: 60px;
   left: 0;
