--- a/styles/home.scss
+++ b/styles/home.scss
@@ -61,11 +61,18 @@ body {
 }
 
 .user-list-container {
+  padding-left: 5px;
   width: 20%;
   height: 100%;
   border-left: 1px solid $borderColor;
   position: fixed;
   right: 0;
+}
+
+.user-list {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .message {
@@ -92,6 +99,9 @@ body {
 .message-username {
   flex: 2;
   font-weight: 700;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .navbar {
